@@ -11,11 +11,13 @@ RPN new buttons/operations:
 	[DONE] x<>y ... swap x and y
 	[DONE] roll ... roll down the stack: x->t->z->y->x
 
-RPN and memory
+mr and const should push the stack: problem: display_result_set & rpn_have_result
+
+[DONE] memory save, memory read and constant retrieve set calc_entry_start_new=TRUE
 
 stack clears on basic <-> scientific
 
-test infinite <-> finite stack size
+[DONE] test infinite <-> finite stack size
 
 ---bug reports
 	[DONE] = <-> ENT in RPN startup
